@@ -12,7 +12,7 @@ Metabase stores connection information for the various databases you add in the 
 
 1. Generate a secret key that is at least 16 characters (longer is even better!). We recommend using a secure random key generator, such as `openssl`.
    > You cannot decrypt connection details without this key. If you lose (or change) the key, you'll have to reset all of the connection details that have been encrypted with that key in the Admin Panel.
-2. Set your secret key as the environment variable `MB_ENCRYPTION_SECRET_KEY`. On paid plans, you can set also set this using the [config file](../configuring-metabase/config-file.md).
+2. Set your secret key as the environment variable `MB_ENCRYPTION_SECRET_KEY`. On self-hosted [Pro and Enterprise plans](https://www.metabase.com/pricing/) plans, you can set also set this using the [config file](../configuring-metabase/config-file.md).
 
 ### Example commands for creating and adding a key
 
@@ -26,12 +26,10 @@ Metabase stores connection information for the various databases you add in the 
    ```
 3. Set the key as an environment variable and start Metabase as usual.
    ```
-   MB_ENCRYPTION_SECRET_KEY="IYqrSi5QDthvFWe4/WdAxhnra5DZC3RKx3ZSrOJDKsM=" java -jar metabase.jar
+   MB_ENCRYPTION_SECRET_KEY="IYqrSi5QDthvFWe4/WdAxhnra5DZC3RKx3ZSrOJDKsM=" java --add-opens java.base/java.nio=ALL-UNNAMED -jar metabase.jar
    ```
 
 Once you set the `MB_ENCRYPTION_SECRET_KEY` value, Metabase will automatically encrypt and store the connection details for each new database that you add. To encrypt existing connections, see the next section.
-
-> Some versions of Linux interpret single-quotes (`'`) and double-quotes (`"`) differently for environment variable values. If you upgrade to a newer version of Linux, and the key originally used single-quotes, you might need to wrap the key in double-quotes, so that the single-quotes are interpreted literally. For example, `MB_ENCRYPTION_SECRET_KEY='IYq...sM='` would become `MB_ENCRYPTION_SECRET_KEY="'IYq...sM='"`
 
 ## Encrypting an existing connection
 
@@ -48,7 +46,7 @@ If you added databases before setting the `MB_ENCRYPTION_SECRET_KEY` value, you 
 ### Example command for rotating a key
 
 ```
-MB_ENCRYPTION_SECRET_KEY=your-current-key java -jar metabase.jar rotate-encryption-key new-key
+MB_ENCRYPTION_SECRET_KEY=your-current-key java --add-opens java.base/java.nio=ALL-UNNAMED -jar metabase.jar rotate-encryption-key new-key
 ```
 
 ## Disabling an encryption key
@@ -58,5 +56,5 @@ To disable an encryption key, follow the steps to [rotate an encryption key](#ro
 ### Example command for disabling a key
 
 ```
-MB_ENCRYPTION_SECRET_KEY="your-current-key" java -jar metabase.jar rotate-encryption-key ""
+MB_ENCRYPTION_SECRET_KEY="your-current-key" java --add-opens java.base/java.nio=ALL-UNNAMED -jar metabase.jar rotate-encryption-key ""
 ```
