@@ -27,13 +27,14 @@ There are two ways to run these `export` and `import` commands:
 
 - **Staging environments**. Enable a staging-to-production workflow for important dashboards by exporting from a staging instance of Metabase and then importing them into your production instance(s).
 - **Version control**. Check the exported files into version control and audit changes to them, as the YAML files contained within the export are pretty readable.
+- **Duplicating assets to other Metabase instances**. Export the "template" data from a source Metabase and import them to one or more target instances.
 
 Check out our guides for:
 
-- [Running multiple environments](https://www.metabase.com/learn/administration/multi-env)
-- [Setting up git-based workflow](https://www.metabase.com/learn/administration/git-based-workflow)
+- [Running multiple environments](https://www.metabase.com/learn/metabase-basics/administration/administration-and-operation//multi-env)
+- [Setting up git-based workflow](https://www.metabase.com/learn/metabase-basics/administration/administration-and-operation//git-based-workflow)
 
-> Serialization isn't intended for use cases like duplicating assets or swapping data sources within the same Metabase instance. If you're using serialization for duplicating entities, check out [How export works](#how-export-works), [How import works](#how-import-works), and the directions for your use case in [Other uses of serialization](#other-uses-of-serialization)
+> Serialization isn't intended for use cases like duplicating assets or swapping data sources _within_ the same Metabase instance. If you're using serialization for duplicating assets within the same instance, check out [How export works](#how-export-works), [How import works](#how-import-works), and the directions for your use case in [Other uses of serialization](#other-uses-of-serialization)
 
 ## How export works
 
@@ -45,21 +46,23 @@ Check out our guides for:
 
 ### What gets exported
 
-Metabase will only include some artifacts in its exports:
+Metabase will only export the following entities:
 
 - Collections (but personal collections don't get exported unless explicitly specified them through [export options](#customize-what-gets-exported))
 - Dashboards
 - Saved questions
 - Actions
 - Models
+- Metrics
 - SQL Snippets
 - Data model and table metadata
-- Segments and Metrics defined in the Table Metadata
+- Segments
 - Public sharing settings for questions and dashboards
 - [General Metabase settings](#general-metabase-settings-that-are-exported)
 - Events and timelines
-- Database connection strings (only if specified through [export options](#customize-what-gets-exported))
-  (#customize-what-gets-exported).
+- Database connection strings (only if specified through [export options](#customize-what-gets-exported)).
+
+All other entities—including users, groups, permissions, alerts, subscriptions—won't get exported.
 
 Metabase will export its artifacts to a directory of YAML files. The export includes:
 
@@ -141,7 +144,9 @@ See [export parameters in CLI commands](#export-options) or [export parameters i
 
 ### Example of a serialized question
 
-Questions can be found in the `cards` directory of a collection directory. Here's an example card YAML file for a question written with SQL that uses a field filter and has an area chart visualization:
+Questions can be found in the `cards` directory of a collection directory. Here's an example card YAML file for a question written with SQL that uses a field filter and has an area chart visualization.
+
+> To preserve a native query's multi-line format, remove trailing whitespace from native queries. If your native query has trailing whitespace, YAML will convert your query to a single string literal (which only affects presentation, not functionality).
 
 ```yml
 name: Products by week
@@ -322,6 +327,8 @@ Metabase will not delete items from target instance during import, but it will o
 
 Metabase relies on [Entity IDs](#metabase-uses-entity-ids-to-identify-and-reference-metabase-items) to figure out which items to create or overwrite, and what are the relationships between items. When importing into an instance that already has some content in it, keep in mind:
 
+- If you import an item with an `entity_id` that doesn't exist in your target Metabase, Metabase will create a new item.
+
 - If you import an item with an `entity_id` that already exists in your target Metabase, the existing item will be overwritten.
 
   In particular, this means that if you export a question, then make a change in an exported YAML file — like rename a question by directly editing the `name` field — and then import the edited file back, Metabase will try to apply the changes you made to the YAML.
@@ -374,7 +381,7 @@ See [How export works](#how-export-works), [How import works](#how-import-works)
 To export the contents of a Metabase instance, change into the directory where you're running the Metabase JAR and run:
 
 ```
-java -jar metabase.jar export dir_name
+java --add-opens java.base/java.nio=ALL-UNNAMED -jar metabase.jar export dir_name
 ```
 
 Where `dir_name` can be whatever you want to call the directory.
@@ -384,7 +391,7 @@ Where `dir_name` can be whatever you want to call the directory.
 To view a list of `export` options, use the `help` command:
 
 ```
-java -jar metabase.jar help export
+java --add-opens java.base/java.nio=ALL-UNNAMED -jar metabase.jar help export
 ```
 
 Which will run and then print something like:
@@ -410,7 +417,7 @@ The `--collection` flag (alias `-c`) lets you specify by ID one or more collecti
 If you want to specify multiple collections, separate the IDs with commas. E.g.,
 
 ```
-java -jar metabase.jar export export_name --collection 1,2,3
+java --add-opens java.base/java.nio=ALL-UNNAMED -jar metabase.jar export export_name --collection 1,2,3
 ```
 
 #### `--no-collections`
@@ -438,7 +445,7 @@ The `--include-database-secrets` flag (alias `-s`) tells Metabase to include con
 To import exported artifacts into a Metabase instance, go to the directory where you're running your target Metabase (the Metabase you want to import into) and use the following command, where `path_to_export` is the path to the export that you want to import:
 
 ```
-java -jar metabase.jar import path_to_export
+java --add-opens java.base/java.nio=ALL-UNNAMED -jar metabase.jar import path_to_export
 ```
 
 Currently, you can only import exported artifacts into a Metabase instance that was created from the same version of Metabase.
@@ -448,7 +455,7 @@ Currently, you can only import exported artifacts into a Metabase instance that 
 Most options are defined when exporting data from a Metabase. To view a list of import flags, run:
 
 ```
-java -jar metabase help import
+java --add-opens java.base/java.nio=ALL-UNNAMED -jar metabase.jar help import
 ```
 
 Which prints out:
@@ -468,6 +475,8 @@ There are two endpoints:
 
 - `POST /api/ee/serialization/export`
 - `POST /api/ee/serialization/import`
+
+> We use `POST`, not `GET`, for the `/export` endpoint. The export operation does not modify your Metabase, but it's long and intensive, so we use `POST` to prevent accidental exports.
 
 For now, these endpoints are synchronous. If the serialization process takes too long, the request can time out. In this case, we suggest using the CLI commands.
 
@@ -582,7 +591,7 @@ To keep file sizes over the network under control, both the `export` and `import
 To compress a directory (e.g., a directory named `metabase_data`).
 
 ```sh
-tar -czf  metabase_data
+tar -czf  metabase_data.tgz metabase_data
 ```
 
 #### Extract a directory
@@ -612,6 +621,8 @@ curl \
 ```
 
 substituting `YOUR_API_KEY` with your API key and `your-metabase-url` with the URL of your Metabase instance.
+
+> We use `POST`, not `GET`, for the `/export` endpoint.
 
 This command will download the files as a GZIP-compressed Tar file named `metabase_data.tgz`.
 
@@ -652,9 +663,9 @@ The `-o -` option will output logs in the terminal.
 
 ## Other uses of serialization
 
-Serialization is intended for version control and staging-to-production workflows. While it is possible to use serialization for other use cases like duplicating assets within a single instance, these use cases are not currently officially supported.
+Serialization is intended for version control, staging-to-production workflows, and duplicating assets to other Metabase instances. While it's possible to use serialization for other use cases (like duplicating assets _within_ a single instance), we don't officially support these use cases.
 
-We're providing some directions on how to approach alternative use cases, but you should use them at your own risk. We strongly recommend that you test any process involving serialization on a non-production instance first, and reach out to [help@metabase.com](mailto:help@metabase.com) if you have any questions.
+We're providing some directions on how to approach these unsupported use cases, but you should use them at your own risk. We strongly recommend that you test any process involving serialization on a non-production instance first, and reach out to [help@metabase.com](mailto:help@metabase.com) if you have any questions.
 
 ### Using serialization for duplicating content within the same Metabase
 
@@ -745,7 +756,7 @@ If you've written scripts to automate serialization, you'll need to:
 
 ## Further reading
 
-- [Serialization tutorial](https://www.metabase.com/learn/administration/serialization).
-- [Multiple environments](https://www.metabase.com/learn/administration/multi-env)
-- [Setting up a git-based workflow](https://www.metabase.com/learn/administration/git-based-workflow).
+- [Serialization tutorial](https://www.metabase.com/learn/metabase-basics/administration/administration-and-operation//serialization).
+- [Multiple environments](https://www.metabase.com/learn/metabase-basics/administration/administration-and-operation//multi-env)
+- [Setting up a git-based workflow](https://www.metabase.com/learn/metabase-basics/administration/administration-and-operation//git-based-workflow).
 - Need help? Contact [support@metabase.com](mailto:support@metabase.com).
